Add custom validation for url
