# CatMarket/src/main/kotlin/labs/catmarket/infrastructure/controller/ProductController.kt
@@ -1,12 +1,13 @@
 package labs.catmarket.infrastructure.controller
 
+import jakarta.validation.Valid
 import labs.catmarket.application.useCase.product.CreateProductUseCase
 import labs.catmarket.application.useCase.product.DeleteProductByIdUseCase
 import labs.catmarket.application.useCase.product.GetAllProductsUseCase
 import labs.catmarket.application.useCase.product.GetProductByIdUseCase
 import labs.catmarket.application.useCase.product.UpdateProductByIdUseCase
 import labs.catmarket.infrastructure.dto.requet.busines.ProductDtoRequest
-import labs.catmarket.infrastructure.dto.response.busines.ProductDtoResponse
+import labs.catmarket.infrastructure.dto.response.ProductDtoResponse
 import labs.catmarket.infrastructure.mapper.ProductWebMapper
 import labs.catmarket.infrastructure.mapper.ProductWebMapperHelper
 import org.springframework.http.ResponseEntity
@@ -16,6 +17,7 @@ import org.springframework.web.bind.annotation.PathVariable
 import org.springframework.web.bind.annotation.PostMapping
 import org.springframework.web.bind.annotation.PutMapping
 import org.springframework.web.bind.annotation.RequestBody
+import org.springframework.validation.annotation.Validated
 import org.springframework.web.bind.annotation.RequestMapping
 import org.springframework.web.bind.annotation.RestController
 import java.net.URI
@@ -23,6 +25,7 @@ import java.util.UUID
 
 @RestController
 @RequestMapping("/api/v1/products")
+@Validated
 class ProductController(
     private val productWebMapper: ProductWebMapper,
     private val productWebMapperHelper: ProductWebMapperHelper,
@@ -31,11 +34,10 @@ class ProductController(
     private val getProductByIdUseCase: GetProductByIdUseCase,
     private val updateProductByIdUseCase: UpdateProductByIdUseCase,
     private val deleteProductByIdUseCase: DeleteProductByIdUseCase,
-
 ) {
 
     @PostMapping
-    fun save(@RequestBody request: ProductDtoRequest): ResponseEntity<ProductDtoResponse> {
+    fun save(@RequestBody @Valid request: ProductDtoRequest): ResponseEntity<ProductDtoResponse> {
         val command = productWebMapper.toCommand(request)
         val response = productWebMapper.toDto(createProductUseCase.execute(command), productWebMapperHelper)
         val location = URI.create("/api/v1/categories/${response.id}")
@@ -58,7 +60,7 @@ class ProductController(
     @PutMapping("/{id}")
     fun updateById(
         @PathVariable id: UUID,
-        @RequestBody request: ProductDtoRequest
+        @RequestBody @Valid request: ProductDtoRequest
     ): ResponseEntity<ProductDtoResponse> {
         val pair = id to productWebMapper.toCommand(request)
         val response = productWebMapper.toDto(updateProductByIdUseCase.execute(pair), productWebMapperHelper)
