# CatMarket/src/main/kotlin/labs/catmarket/infrastructure/mapper/ProductWebMapper.kt
@@ -1,16 +1,12 @@
 package labs.catmarket.infrastructure.mapper
 
-import labs.catmarket.application.useCase.category.GetCategoryByIdUseCase
 import labs.catmarket.application.useCase.product.UpsertProductCommand
 import labs.catmarket.domain.product.Product
 import labs.catmarket.infrastructure.dto.requet.busines.ProductDtoRequest
-import labs.catmarket.infrastructure.dto.response.busines.ProductDtoResponse
-import org.mapstruct.IterableMapping
+import labs.catmarket.infrastructure.dto.response.ProductDtoResponse
 import org.mapstruct.Mapper
 import org.mapstruct.Mapping
 import org.mapstruct.Named
-import org.springframework.stereotype.Component
-import java.util.UUID
 
 @Mapper(componentModel = "spring", uses = [ProductWebMapperHelper::class])
 interface ProductWebMapper {
